--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Default screen margins and elevations, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">24dp</dimen>
     <dimen name="activity_vertical_margin">24dp</dimen>
-    <dimen name="drawer_width">300dp</dimen>
     <dimen name="fragment_margin_start">@dimen/drawer_width</dimen>
+
+    <!-- PhotoFragment -->
     <dimen name="photo_dimensions">400dp</dimen>
     <dimen name="photo_description_text_size">18dp</dimen>
+
+    <!-- AsteroidFragment -->
     <dimen name="asteroid_text_size">16dp</dimen>
+
+    <!-- NavigationDrawer -->
+    <dimen name="drawer_width">300dp</dimen>
 </resources>
