--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,9 +1,41 @@
 <resources>
+    <!-- Base application theme. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColorPrimary">@color/colorTextPrimary</item>
+        <item name="android:textColorSecondary">@color/colorTextSecondary</item>
+        <item name="android:windowContentTransitions">true</item>
+    </style>
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowContentTransitions">true</item>
+    </style>
+
+    <!-- Style of the buttons -->
+    <style name="ButtonStyle" parent="TextAppearance.AppCompat.Widget.Button">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/colorAccent</item>
+        <item name="android:textColor">@color/colorTextIcons</item>
+        <item name="android:paddingLeft">@dimen/margin_list_item</item>
+        <item name="android:paddingRight">@dimen/margin_list_item</item>
+        <item name="android:elevation">@dimen/button_elevation_rested</item>
+        <item name="android:popupElevation">@dimen/button_elevation_pressed</item>
+        <item name="android:translationZ">@dimen/button_elevation_pressed</item>
+        <item name="android:stateListAnimator">@null</item>
+    </style>
+
+    <!-- Style for the image of the observatory -->
+    <style name="ObservatoryImageButtonStyle">
+        <item name="android:layout_height">@dimen/image_dimensions</item>
+        <item name="android:layout_width">@dimen/image_dimensions</item>
+        <item name="android:stateListAnimator">@null</item>
+        <item name="android:elevation">@dimen/button_elevation_rested</item>
+        <item name="android:translationZ">@dimen/button_elevation_pressed</item>
     </style>
 </resources>
