--- a/app/src/main/res/values/bools.xml
+++ b/app/src/main/res/values/bools.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Boolean that indicates if a device is a tablet -->
     <bool name="isTablet">false</bool>
 </resources>
