--- a/app/src/main/res/xml/astro_app_widget_info.xml
+++ b/app/src/main/res/xml/astro_app_widget_info.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialKeyguardLayout="@layout/astro_app_widget"
     android:initialLayout="@layout/astro_app_widget"
-    android:minWidth="110dp"
-    android:minHeight="110dp"
+    android:minWidth="@dimen/app_widget_dimensions"
+    android:minHeight="@dimen/app_widget_dimensions"
     android:previewImage="@mipmap/ic_launcher"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="1800000"
