Update UI for the empty views, as well as the PhotoFragment

--- a/app/src/main/res/layout/fragment_observatory_list.xml
+++ b/app/src/main/res/layout/fragment_observatory_list.xml
@@ -7,7 +7,7 @@
     android:layout_marginStart="@dimen/fragment_margin_start"
     android:layout_marginTop="?android:actionBarSize">
 
-    <RelativeLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -15,27 +15,38 @@
             android:id="@+id/observatory_list_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            />
 
         <!-- Empty view is only visible when the list has no items-->
         <TextView
             android:id="@+id/observatory_list_empty_text_view"
             style="@style/EmptyTextViewStyle"
-            android:layout_centerInParent="true"
+            app:layout_constraintTop_toBottomOf="@id/observatory_list_empty_image_view"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:text="@string/no_observatories_found" />
 
         <ImageView
             android:id="@+id/observatory_list_empty_image_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@id/observatory_list_empty_text_view"
             android:contentDescription="@null"
             android:paddingBottom="@dimen/margin"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:src="@drawable/ic_nothing_found" />
 
         <ProgressBar
             android:id="@+id/observatory_list_loading_indicator"
             style="@style/LoadingIndicatorStyle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_centerInParent="true" />
-    </RelativeLayout>
+    </android.support.constraint.ConstraintLayout>
 </android.support.v4.widget.NestedScrollView>
