--- a/app/src/main/res/layout/fragment_observatory.xml
+++ b/app/src/main/res/layout/fragment_observatory.xml
@@ -21,10 +21,9 @@
             android:id="@+id/observatory_empty_text_view"
             style="@style/EmptyTextViewStyle"
             android:text="@string/observatory_details_not_found"
-            app:layout_constraintTop_toBottomOf="@id/observatory_empty_image_view"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/observatory_empty_image_view" />
 
         <ImageView
             android:id="@+id/observatory_empty_image_view"
@@ -32,12 +31,12 @@
             android:layout_height="wrap_content"
             android:contentDescription="@null"
             android:paddingTop="@dimen/margin"
+            android:paddingBottom="@dimen/margin"
             android:src="@drawable/ic_nothing_found"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/observatory_empty_text_view" />
+            app:layout_constraintTop_toBottomOf="@id/observatory_empty_text_view"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ProgressBar
             android:id="@+id/observatory_loading_indicator"
@@ -52,8 +51,8 @@
             style="@style/ObservatoryListItemTitleStyle"
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Bavarian Public Observatory Munich" />
 
