--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -26,42 +26,45 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@null"
+            android:paddingTop="@dimen/margin"
+            android:paddingBottom="@dimen/margin"
             android:src="@drawable/ic_nothing_found"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/photo_view"
-            style="@style/PhotoImageView"
-            android:contentDescription="@string/photo_of_the_day_content_description"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@mipmap/ic_launcher" />
-
-        <Button
-            android:id="@+id/play_video_button"
-            style="@style/ButtonStyle"
-            android:nextFocusForward="@id/photo_title_text_view"
-            android:text="@string/play_video_button"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/photo_title_text_view"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <FrameLayout
+            android:id="@+id/photo_video_frame_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/margin"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/photo_view"
+                style="@style/PhotoImageView"
+                android:layout_gravity="center"
+                android:contentDescription="@string/photo_of_the_day_content_description"
+                tools:src="@mipmap/ic_launcher" />
+
+            <Button
+                android:id="@+id/play_video_button"
+                style="@style/ButtonStyle"
+                android:nextFocusForward="@id/photo_title_text_view"
+                android:layout_gravity="center"
+                android:text="@string/play_video_button" />
+        </FrameLayout>
 
         <TextView
             android:id="@+id/photo_title_text_view"
             style="@style/PhotoTitleTextView"
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/photo_view"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/photo_video_frame_layout"
             tools:text="Moons near Jupiter" />
-
 
         <ProgressBar
             android:id="@+id/photo_loading_indicator"
