Code cleanup according to Lint code inspection

--- a/app/src/main/res/layout-v21/app_bar_main.xml
+++ b/app/src/main/res/layout-v21/app_bar_main.xml
@@ -10,8 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="@dimen/app_bar_layout_main_elevation"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        tools:targetApi="lollipop">
+        android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
