--- a/app/src/main/res/layout-v21/activity_main.xml
+++ b/app/src/main/res/layout-v21/activity_main.xml
@@ -8,8 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start"
-    tools:targetApi="lollipop">
+    tools:openDrawer="start">
 
     <FrameLayout
         android:id="@+id/fragment_container"
