--- a/app/src/main/res/layout/observatory_list_item.xml
+++ b/app/src/main/res/layout/observatory_list_item.xml
@@ -20,7 +20,8 @@
         android:singleLine="false"
         android:layout_gravity="start"
         android:ellipsize="start"
-        tools:text="Bavarian Public Observatory Munich, Bavarian Public Observatory Munich" />
+        tools:text="Bavarian Public Observatory Munich, Bavarian Public Observatory Munich"
+        tools:ignore="RtlSymmetry" />
 
     <TextView
         android:id="@+id/observatory_list_item_address"
@@ -32,7 +33,8 @@
         android:singleLine="false"
         app:layout_constraintStart_toStartOf="@id/observatory_list_item_name"
         app:layout_constraintTop_toBottomOf="@id/observatory_list_item_name"
-        tools:text="Rosenheimer Str. 160H, Rosenheimer Str. 160H, Rosenheimer Str. 160H" />
+        tools:text="Rosenheimer Str. 160H, Rosenheimer Str. 160H, Rosenheimer Str. 160H"
+        tools:ignore="RtlSymmetry" />
 
     <TextView
         android:id="@+id/observatory_list_item_opening_Hours"
@@ -45,7 +47,8 @@
         android:singleLine="false"
         app:layout_constraintStart_toStartOf="@id/observatory_list_item_address"
         app:layout_constraintTop_toBottomOf="@id/observatory_list_item_address"
-        tools:text="Open now" />
+        tools:text="Open now"
+        tools:ignore="RtlSymmetry" />
 
     <ImageButton
         android:id="@+id/observatory_list_item_button"
