Update onBackPressed functionality

--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -25,6 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:textAlignment="viewStart"
         android:text="@string/nav_header_title"
         android:textColor="@color/colorTextIcons"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
@@ -32,6 +33,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAlignment="viewStart"
         android:textColor="@color/colorTextIcons"
         android:text="@string/nav_header_subtitle" />
 </LinearLayout>
