--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -51,8 +51,8 @@
             <Button
                 android:id="@+id/play_video_button"
                 style="@style/ButtonStyle"
-                android:nextFocusForward="@id/photo_title_text_view"
                 android:layout_gravity="center"
+                android:nextFocusForward="@id/photo_title_text_view"
                 android:text="@string/play_video_button" />
         </FrameLayout>
 
@@ -85,9 +85,10 @@
         <TextView
             android:id="@+id/photo_description_text_view"
             style="@style/PhotoDescriptionTextView"
+            android:paddingBottom="@dimen/margin"
+            android:textAlignment="viewStart"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:textAlignment="viewStart"
             app:layout_constraintTop_toBottomOf="@id/photo_date_text_view"
             tools:text="On May 20, a nearly Full Moon and Jupiter shared this telephoto field of view. On May 20, a nearly Full Moon and Jupiter shared this telephoto field of view." />
     </android.support.constraint.ConstraintLayout>
