--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -7,6 +7,9 @@
     android:layout_height="match_parent"
     android:layout_marginStart="@dimen/fragment_margin_start"
     android:layout_marginTop="?actionBarSize"
+    android:paddingStart="@dimen/margin_list_item"
+    android:paddingEnd="@dimen/margin_list_item"
+    android:paddingBottom="@dimen/margin"
     tools:ignore="Overdraw">
 
     <android.support.constraint.ConstraintLayout
@@ -85,11 +88,20 @@
         <TextView
             android:id="@+id/photo_description_text_view"
             style="@style/PhotoDescriptionTextView"
-            android:paddingBottom="@dimen/margin"
             android:textAlignment="viewStart"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/photo_date_text_view"
             tools:text="On May 20, a nearly Full Moon and Jupiter shared this telephoto field of view. On May 20, a nearly Full Moon and Jupiter shared this telephoto field of view." />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/margin"
+            android:src="@drawable/ic_share"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/photo_description_text_view" />
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
