--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,16 +10,19 @@
             android:id="@+id/nav_photo"
             android:icon="@drawable/ic_camera_alt"
             android:nextFocusForward="@id/nav_asteroids"
+            android:contentDescription="@string/menu_photo_content_description"
             android:title="@string/menu_photo" />
         <item
             android:id="@+id/nav_asteroids"
             android:icon="@drawable/ic_asteroid_nav"
             android:nextFocusForward="@id/nav_observatories"
+            android:contentDescription="@string/menu_asteroids_content_description"
             android:title="@string/menu_asteroids" />
         <item
             android:id="@+id/nav_observatories"
             android:icon="@drawable/ic_observatory"
             android:nextFocusForward="@id/nav_photo"
+            android:contentDescription="@string/menu_observatories_content_description"
             android:title="@string/menu_observatories" />
     </group>
 </menu>
