--- a/app/src/main/res/xml/astro_app_widget_info.xml
+++ b/app/src/main/res/xml/astro_app_widget_info.xml
@@ -7,6 +7,6 @@
     android:minHeight="@dimen/app_widget_dimensions"
     android:previewImage="@mipmap/ic_launcher"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="90000"
+    android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen">
 </appwidget-provider>
