--- a/app/src/main/res/layout/fragment_observatory_list.xml
+++ b/app/src/main/res/layout/fragment_observatory_list.xml
@@ -16,10 +16,21 @@
             style="@style/ButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin"
             android:text="@string/activate_location"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/observatory_list_empty_text_view" />
+
+        <Button
+            android:id="@+id/grant_location_permission_button"
+            style="@style/ButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/grant_location_permission"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="@dimen/margin"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/observatory_list_empty_text_view" />
 
         <!-- Empty view is only visible when the list has no items-->
