--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,12 +8,16 @@
         <item name="android:textColorSecondary">@color/colorTextSecondary</item>
     </style>
 
+    <!-- Theme for the full screen layout -->
+    <style name="AppBaseTheme" parent="Theme.Design.Light.NoActionBar" />
+
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <!-- Style of the photo ImageView -->
