Add ID's to all the views in the layout files to help restore the state after rotation; add screenSize to configChanges in the AndroidManifest

--- a/app/src/main/res/layout/fragment_observatory_list.xml
+++ b/app/src/main/res/layout/fragment_observatory_list.xml
@@ -8,6 +8,7 @@
     android:layout_marginTop="?android:actionBarSize">
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/fragment_observatory_list_constraint_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
