--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -19,6 +19,7 @@
         tools:ignore="Overdraw">
 
         <android.support.constraint.ConstraintLayout
+            android:id="@+id/photo_constraint_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
