--- a/app/src/main/res/layout-v21/app_bar_main.xml
+++ b/app/src/main/res/layout-v21/app_bar_main.xml
@@ -2,12 +2,14 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/app_bar_main_coordinator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
+        android:id="@+id/app_bar_main_appbar_layout"
         android:layout_height="wrap_content"
         android:elevation="@dimen/app_bar_layout_main_elevation"
         android:theme="@style/AppTheme.AppBarOverlay">
