--- a/app/src/main/res/layout/fragment_observatory.xml
+++ b/app/src/main/res/layout/fragment_observatory.xml
@@ -13,6 +13,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/fragment_observatory_constraint_layout"
         android:layout_marginStart="@dimen/fragment_margin_start"
         android:layout_marginTop="?actionBarSize">
 
